# Venus-Challenge-Embedded-Software

./: .gitignore  Makefile
applications/: end.mk  shared.mk
applications/IR_test/: main.c
applications/adc/: main.c
applications/com-test/: Makefile  main.c
applications/com-test-copy/: Makefile  main.c
applications/display-cat/: main.c  print_status.sh
applications/display-test/: main.c
applications/eventloop/: Makefile  irdecoder.c  irdecoder.h  main.c  wrapper.c  wrapper.h
applications/final-program/: CMakeLists.txt  Makefile  main.cpp  structs.h
applications/final-program-simplified/: CMakeLists.txt
applications/final-program-simplified/src/: main.cpp
applications/final-program-simplified/src/communication/: SerialClient.cpp  SerialClient.hpp
applications/final-program-simplified/src/motor/: Motor.cpp  Motor.hpp  MotorController.cpp  MotorController.hpp
applications/final-program-simplified/src/sensors/: ColourSensor.cpp  ColourSensor.hpp  DistanceSensor.cpp  DistanceSensor.hpp  IRSensor.cpp  IRSensor.hpp  Sensor.cpp  Sensor.hpp
applications/final-program-simplified/src/utils/: LocalMap.cpp  RobotParams.hpp
applications/final-program/src/: RobotManager.cpp  RobotManager.hpp  main.cpp
applications/final-program/src/threads/: ComManagerThread.cpp  ComManagerThread.hpp  SensorManager.cpp  SensorManager.hpp  StepperThread.cpp  StepperThread.hpp  Stepper_joris  com_manager_thread.cpp  com_manager_thread.hpp  stepper_thread.cpp  stepper_thread.hpp
applications/final-program/src/threads/sensors/: ColorSensor.cpp  ColorSensor.hpp  DistanceSensor.cpp  DistanceSensor.hpp  IRSensor.cpp  IRSensor.hpp  IR_sensor  Sensor.hpp
applications/final-program/src/utils/: structs.h  structs.hpp
applications/final-program/threads/: com_manager_thread.h  stepper_thread.cpp  stepper_thread.hpp
applications/gpio-buttons/: main.c
applications/gy-271-test/: Makefile  QMC5883L.c  QMC5883L.h  main.c
applications/interrupt/: main.c
applications/interrupt-poll/: Makefile  main.c
applications/logtest/: main.c
applications/pin-indexing-tool/: main.c
applications/read-version/: main.c
applications/scpi-bridge/: Makefile  adc-thread.c  adc-thread.h  commands.txt  display-SCPI.c  display-SCPI.h  driver_ads1115.c  driver_ads1115.h  main.c  scpi_names.h  update-scpi.sh  version.txt
applications/scpi-bridge/example-inputs/: ads_test.txt  ads_test2.txt  frespping.txt  pulsecounter.scpi  read_adc.txt  set_lds.txt  set_pwm_lds.txt  set_pwm_leds_steps.txt  testtimer.scpi  testtimer_interval.scpi  turn_off_bl.txt  uart_test.txt
applications/step_motor/: main.c
applications/template/: main.c
applications/template-cpp/: Makefile  main.cpp
applications/tof-example/: Makefile
vscode/: launch.json  tasks.json
